--- a/src/cukrovinky.html
+++ b/src/cukrovinky.html
@@ -200,7 +200,7 @@
 
 <a id="jine-ocukrovane-kastany"><h2>Jiné ocukrované kaštany</h2></a>
 
-<p>Uvař a&nbsp;oloupej půl kopy kaštanů, pak je ustrouhej a&nbsp;utluč se čtyřmi <a href="miry-a-vahy.html#lot" class="mav">loty</a> cukru a&nbsp;trochou vody na jemné těstíčko; z&nbsp;tohoto pak buď tvořítkem anebo pouze rukama opět utvoř kaštany a,nech je trochu oschnout Mezitím nech čtvrt <a href="miry-a-vahy.html#libra" class="mav">libry</a> cukru se čtyřmi lžícemi vody až k&nbsp;šestému stupni zvařit, přimíchej k&nbsp;němu pěknou velkou tabulku čokolády, a&nbsp;míchej tím, až je z&nbsp;toho hodně hustá kasička, pak v&nbsp;ní buď omáčej anebo ní potírej na dřívko napíchnuté kaštany, nech je jako předešlé oschnout a&nbsp;vlož je do papírků.</p>
+<p>Uvař a&nbsp;oloupej půl kopy kaštanů, pak je ustrouhej a&nbsp;utluč se čtyřmi <a href="miry-a-vahy.html#lot" class="mav">loty</a> cukru a&nbsp;trochou vody na jemné těstíčko; z&nbsp;tohoto pak buď tvořítkem anebo pouze rukama opět utvoř kaštany a nech je trochu oschnout Mezitím nech čtvrt <a href="miry-a-vahy.html#libra" class="mav">libry</a> cukru se čtyřmi lžícemi vody až k&nbsp;šestému stupni zvařit, přimíchej k&nbsp;němu pěknou velkou tabulku čokolády, a&nbsp;míchej tím, až je z&nbsp;toho hodně hustá kasička, pak v&nbsp;ní buď omáčej anebo ní potírej na dřívko napíchnuté kaštany, nech je jako předešlé oschnout a&nbsp;vlož je do papírků.</p>
 
 <a id="ocukrovane-amarelky"><h2>Ocukrované amarelky</h2></a>
 
