--- a/src/nakypy.html
+++ b/src/nakypy.html
@@ -68,7 +68,7 @@
 
 <a id="nakyp-z-krup"><h2>Nákyp z&nbsp;krup</h2></a>
 
-<p>Upraž pro 10 i&nbsp;12 osob půl <a href="miry-a-vahy.html#zejdlik" class="mav">žejdlíka</a> drobných tak nazvaných perlových krup hezky do hnědá jako kávová zrnka, pak je v&nbsp;moždíři na moučku utluč, načež tuto dej na kuthánek na uhlí nebo na horkou plotnu, nalej do ni mezi ustavičným mícháním pět čtvrtí <a href="miry-a-vahy.html#zejdlik" class="mav">žejdlíka</a> vařící smetany, a&nbsp;nech to při stálém míchání tak.dlouho vařit, až je z&nbsp;toho hezky hustá kaše, pak ji nech vychladnout; potom utři na misce 2 <a href="miry-a-vahy.html#lot" class="mav">loty</a> nového másla, dej k&nbsp;němu tu prochladlou kaši, vraz do toho 8 žloutků, utluč 6 <a href="miry-a-vahy.html#lot" class="mav">lotů</a> cukru s&nbsp;kouskem vanilie, dej ho k&nbsp;tomu, a&nbsp;míchej tím hodně aspoň čtvrt hodiny, pak to malinko osol a&nbsp;vmíchej do toho tuhý sníh ze šesti bilků; nyní vymaž máslem dvě prostřední melounové formy, vysyp je žemličkou, dej to do nich a&nbsp;nech to hodinu v&nbsp;páře vařit, pak i&nbsp;s&nbsp;vodou v&nbsp;troubě dopect; potom to vyklop, posyp cukrem s&nbsp;vanilií tlučeným a&nbsp;dej to na tabuli.</p>
+<p>Upraž pro 10 i&nbsp;12 osob půl <a href="miry-a-vahy.html#zejdlik" class="mav">žejdlíka</a> drobných tak nazvaných perlových krup hezky do hnědá jako kávová zrnka, pak je v&nbsp;moždíři na moučku utluč, načež tuto dej na kuthánek na uhlí nebo na horkou plotnu, nalej do ni mezi ustavičným mícháním pět čtvrtí <a href="miry-a-vahy.html#zejdlik" class="mav">žejdlíka</a> vařící smetany, a&nbsp;nech to při stálém míchání tak dlouho vařit, až je z&nbsp;toho hezky hustá kaše, pak ji nech vychladnout; potom utři na misce 2 <a href="miry-a-vahy.html#lot" class="mav">loty</a> nového másla, dej k&nbsp;němu tu prochladlou kaši, vraz do toho 8 žloutků, utluč 6 <a href="miry-a-vahy.html#lot" class="mav">lotů</a> cukru s&nbsp;kouskem vanilie, dej ho k&nbsp;tomu, a&nbsp;míchej tím hodně aspoň čtvrt hodiny, pak to malinko osol a&nbsp;vmíchej do toho tuhý sníh ze šesti bilků; nyní vymaž máslem dvě prostřední melounové formy, vysyp je žemličkou, dej to do nich a&nbsp;nech to hodinu v&nbsp;páře vařit, pak i&nbsp;s&nbsp;vodou v&nbsp;troubě dopect; potom to vyklop, posyp cukrem s&nbsp;vanilií tlučeným a&nbsp;dej to na tabuli.</p>
 
 <a id="nakyp-z-tvrdych-zloutku"><h2>Nákyp z&nbsp;tvrdých žloutku</h2></a>
 
@@ -88,7 +88,7 @@
 
 <a id="jiny-chlebovy-nakyp"><h2>Jiný chlebový nákyp</h2></a>
 
-<p>Ustrouhej 4 <a href="miry-a-vahy.html#lot" class="mav">loty</a> domácího samožitného chleba, a&nbsp;pokrop ho buď červeným sladkým nebo mělnickým vínem, aby se rozmočil; pak utři 4 <a href="miry-a-vahy.html#lot" class="mav">loty</a> nového másla, dej do něho ten chléb a&nbsp;dobře to utři, načež k&nbsp;tomu přimíchej 4 <a href="miry-a-vahy.html#lot" class="mav">loty</a> neloupaných, čistě otřených ustrouhaných mandlí, 4 <a href="miry-a-vahy.html#lot" class="mav">loty</a> cukru, trochu tlučené skořice a&nbsp;hřebičku, s&nbsp;půl citronu kůru, trochu květu, dva žloutky a&nbsp;konečně ze dvou bílků sníh, vymaž formu, vysyp ji buď piškotovými drobty neb,o strouhanou žemličkovou kůrkou, vlej to do ní a&nbsp;nech to opect; pak to vyklop, posyp cukrem a&nbsp;nes to na tabuli.</p>
+<p>Ustrouhej 4 <a href="miry-a-vahy.html#lot" class="mav">loty</a> domácího samožitného chleba, a&nbsp;pokrop ho buď červeným sladkým nebo mělnickým vínem, aby se rozmočil; pak utři 4 <a href="miry-a-vahy.html#lot" class="mav">loty</a> nového másla, dej do něho ten chléb a&nbsp;dobře to utři, načež k&nbsp;tomu přimíchej 4 <a href="miry-a-vahy.html#lot" class="mav">loty</a> neloupaných, čistě otřených ustrouhaných mandlí, 4 <a href="miry-a-vahy.html#lot" class="mav">loty</a> cukru, trochu tlučené skořice a&nbsp;hřebičku, s&nbsp;půl citronu kůru, trochu květu, dva žloutky a&nbsp;konečně ze dvou bílků sníh, vymaž formu, vysyp ji buď piškotovými drobty nebo strouhanou žemličkovou kůrkou, vlej to do ní a&nbsp;nech to opect; pak to vyklop, posyp cukrem a&nbsp;nes to na tabuli.</p>
 
 <a id="chlebovy-nakyp-jeste-na-jiny-zpusob"><h2>Chlebový nákyp ještě na jiný způsob</h2></a>
 
@@ -288,7 +288,7 @@
 
 <a id="smazene-svestky"><h2>Smažené švestky</h2></a>
 
-<p>Uvař pěkné suché švestky, vytlač z&nbsp;nich pecky, a&nbsp;na místo těchto strč do každé švestky jednu opařenou mandli; pak udělej těstíčko jako v&nbsp;předešlém předpisu, obal v&nbsp;něm švestky, klad je.do rozpáleného přepouštěného másla a&nbsp;nech je do zlatova vysmažit; pak je posyp skořicí a&nbsp;cukrem a&nbsp;dej je na stůl.</p>
+<p>Uvař pěkné suché švestky, vytlač z&nbsp;nich pecky, a&nbsp;na místo těchto strč do každé švestky jednu opařenou mandli; pak udělej těstíčko jako v&nbsp;předešlém předpisu, obal v&nbsp;něm švestky, klaď je do rozpáleného přepouštěného másla a&nbsp;nech je do zlatova vysmažit; pak je posyp skořicí a&nbsp;cukrem a&nbsp;dej je na stůl.</p>
 
 <a id="smazene-zavitky-s-jahodami"><h2>Smažené závitky s&nbsp;jahodami</h2></a>
 
