--- a/src/omacky-k-hovezimu-masu.html
+++ b/src/omacky-k-hovezimu-masu.html
@@ -92,7 +92,7 @@
 
 <a id="kren-smetanovy"><h2>Křen smetanový</h2></a>
 
-<p>Ustrouhej dobře křen, dej ho do hrnečku, k&nbsp;němu trochu bílé mouky, kousek nového másla, trochu květu a&nbsp;oloupané, ustrouhané nebo tlučené mandle, dobře to umíchej, nech vařit dobrou smetanu, dej do ní kus cukru, zakloktej ní ten křen a, nech ho trochu povařit, potom ho vlej do omáčníku, posyp na vrchu drobet květem a&nbsp;dej ho na stůl. Je-li křen málo perný, musí se dát teprv, až jest ostatní povařeno.</p>
+<p>Ustrouhej dobře křen, dej ho do hrnečku, k&nbsp;němu trochu bílé mouky, kousek nového másla, trochu květu a&nbsp;oloupané, ustrouhané nebo tlučené mandle, dobře to umíchej, nech vařit dobrou smetanu, dej do ní kus cukru, zakloktej ní ten křen a nech ho trochu povařit, potom ho vlej do omáčníku, posyp na vrchu drobet květem a&nbsp;dej ho na stůl. Je-li křen málo perný, musí se dát teprv, až jest ostatní povařeno.</p>
 
 <a id="kren-polivkovy"><h2>Křen polívkový</h2></a>
 
