--- a/src/polivky-masite.html
+++ b/src/polivky-masite.html
@@ -162,7 +162,7 @@
 
 <a id="polivka-s-moucnymi-knedlickami"><h2>Polívka s&nbsp;moučnými knedlíčkami</h2></a>
 
-<p>Utři čtyry <a href="miry-a-vahy.html#lot" class="mav">loty</a> dobrého nového másla, přidej k&nbsp;němu čtyry žloutky a&nbsp;dvě celé vejce, tři lžíce smetany, trochu usekané citronové kůry, osol to patřičně a&nbsp;dobře to utři; mezi třením vmíchej.do toho tolik pěkné mouky, co je potřeba na volné těstíčko, pak zavař knedlíčky po lžičce do polívky a&nbsp;nech je asi deset minut povařit; potom vlej polívku na mísu a&nbsp;nes ji na stůl.</p>
+<p>Utři čtyry <a href="miry-a-vahy.html#lot" class="mav">loty</a> dobrého nového másla, přidej k&nbsp;němu čtyry žloutky a&nbsp;dvě celé vejce, tři lžíce smetany, trochu usekané citronové kůry, osol to patřičně a&nbsp;dobře to utři; mezi třením vmíchej do toho tolik pěkné mouky, co je potřeba na volné těstíčko, pak zavař knedlíčky po lžičce do polívky a&nbsp;nech je asi deset minut povařit; potom vlej polívku na mísu a&nbsp;nes ji na stůl.</p>
 
 <a id="polivka-s-mozeckovymi-vandlickami"><h2>Polívka s&nbsp;mozečkovými vandličkami</h2></a>
 
