--- a/src/rozlicne-ryby.html
+++ b/src/rozlicne-ryby.html
@@ -22,7 +22,7 @@
 
 <a id="kapr-peceny-s-kyselou-smetanou"><h2>Kapr pečený s&nbsp;kyselou smetanou</h2></a>
 
-<p>Trhni a&nbsp;oškrab kapra, přemej ho a&nbsp;dobře ho nasol; pak polož na dno pekáče několik tříštěk, vlož na ně kapra kůží navrch, aby nepřilehl, dej pod něj máslo, rozkrájenou cibuli, trochu dymiánu, celého peře, podlej trochu octa, trochu studničné vody, a, nech ho v&nbsp;troubě hezky do červena upect; nesmíš ho ale obracet, a&nbsp;mezi pečením ho stále polévej kyselou smetanou jako zajíce; pak ho vyndej pozorně na mísu, aby se nerozpadl, omáčku proceď a&nbsp;vlej ji pod něj.</p>
+<p>Trhni a&nbsp;oškrab kapra, přemej ho a&nbsp;dobře ho nasol; pak polož na dno pekáče několik tříštěk, vlož na ně kapra kůží navrch, aby nepřilehl, dej pod něj máslo, rozkrájenou cibuli, trochu dymiánu, celého peře, podlej trochu octa, trochu studničné vody, a nech ho v&nbsp;troubě hezky do červena upect; nesmíš ho ale obracet, a&nbsp;mezi pečením ho stále polévej kyselou smetanou jako zajíce; pak ho vyndej pozorně na mísu, aby se nerozpadl, omáčku proceď a&nbsp;vlej ji pod něj.</p>
 
 <a id="kapr-smazeny"><h2>Kapr smažený</h2></a>
 
