--- a/src/rybi-a-postni-polivky.html
+++ b/src/rybi-a-postni-polivky.html
@@ -52,7 +52,7 @@
 
 <a id="polivka-ze-sneku"><h2>Polívka ze šneků</h2></a>
 
-<p>Uvař půl kopy šneků, vyndej je z&nbsp;domků, očisti je, usekej na drobno a&nbsp;nech je na kousku másla trochu odusit, pak je dej do hrnku, nalej na ně procezené petruželové vody a&nbsp;nech to vařit; usmaž na másle jednu ustrouhanou žemličku, přidej ji ke šnekům a&nbsp;nech to ještě asi hodinu vařit; potom rozmíchej v&nbsp;hrnečku kousek čerstvého másla s&nbsp;trochou mouky, třemi žloutky a&nbsp;s&nbsp;několika lžičkami sladké smetany, nalej na to.trochu vařící polívky a&nbsp;hodně to rozkloktej, načež to vlej do polívky, ještě ji rozkloktej a&nbsp;vlej ji do mísy na usmažené žemličkové kostky.</p>
+<p>Uvař půl kopy šneků, vyndej je z&nbsp;domků, očisti je, usekej na drobno a&nbsp;nech je na kousku másla trochu odusit, pak je dej do hrnku, nalej na ně procezené petruželové vody a&nbsp;nech to vařit; usmaž na másle jednu ustrouhanou žemličku, přidej ji ke šnekům a&nbsp;nech to ještě asi hodinu vařit; potom rozmíchej v&nbsp;hrnečku kousek čerstvého másla s&nbsp;trochou mouky, třemi žloutky a&nbsp;s&nbsp;několika lžičkami sladké smetany, nalej na to trochu vařící polívky a&nbsp;hodně to rozkloktej, načež to vlej do polívky, ještě ji rozkloktej a&nbsp;vlej ji do mísy na usmažené žemličkové kostky.</p>
 
 <a id="polivka-z-raku"><h2>Polívka z&nbsp;raků</h2></a>
 
@@ -120,5 +120,5 @@
 
 <a id="polivka-z-jarnich-bylinek"><h2>Polívka z&nbsp;jarních bylinek</h2></a>
 
-<p>Na jaře sbírají se všelijaké bylinky, z&nbsp;nichžto se velmi chutná a&nbsp;z.dravá polívka upravit může. Vezmi tedy openec, žebříček, jahodové, fialkové a&nbsp;kmínové lístky, chudobičky, cichorku, kerblík, zelenou petruželku, mladé zelené cibulky, řeřichu, polní salátek, všecko dobře očisti a&nbsp;v&nbsp;několika vodách vyper, pak to na prkénku drobně usekej a&nbsp;nech to ve slané vodě do měkka uvařit; potom v&nbsp;hrnéčku rozmíchej kus másla, tři vařečky mouky a&nbsp;tri žloutky se třemi lžícemi studené smetany, nalej na to té vařící polívky, rozkloktej to hodně, a&nbsp;vlej to do ostatní polívky, která se však již nesmí vařit, nýbrž vleje se do mísy na smaženou, na kostky rozkrájenou žemličku.</p>
+<p>Na jaře sbírají se všelijaké bylinky, z&nbsp;nichžto se velmi chutná a&nbsp;zdravá polívka upravit může. Vezmi tedy openec, žebříček, jahodové, fialkové a&nbsp;kmínové lístky, chudobičky, cichorku, kerblík, zelenou petruželku, mladé zelené cibulky, řeřichu, polní salátek, všecko dobře očisti a&nbsp;v&nbsp;několika vodách vyper, pak to na prkénku drobně usekej a&nbsp;nech to ve slané vodě do měkka uvařit; potom v&nbsp;hrnéčku rozmíchej kus másla, tři vařečky mouky a&nbsp;tri žloutky se třemi lžícemi studené smetany, nalej na to té vařící polívky, rozkloktej to hodně, a&nbsp;vlej to do ostatní polívky, která se však již nesmí vařit, nýbrž vleje se do mísy na smaženou, na kostky rozkrájenou žemličku.</p>
 
