--- a/src/salaty.html
+++ b/src/salaty.html
@@ -46,7 +46,7 @@
 
 <a id="salat-vlasky"><h2>Salát vlaský</h2></a>
 
-<p>Rozkrájej tak nazvaný cervulát na tenké koláčky, pak rovnej.okolo mísy vždy jeden koláček cervulátu a&nbsp;jeden koláček citronu, do mísy dej marynovaného ouhoře a&nbsp;pryky, oboje na kousky rozkrájené, jakož i&nbsp;od kůstek očištěné sardele a&nbsp;kaprle; potom utluč v&nbsp;moždíři jeden na tvrdo vařený žloutek, několik bobkových lístků, asi dvě sardele, půl cibule, 3 zrnka pepře a&nbsp;trochu kaprlí, nalej na to dobrý vinní ocet a&nbsp;brabancový olej, a&nbsp;proceď to na salát. Mohou se k&nbsp;tomu též dát ústřice, mušle a&nbsp;olivy – nemusejí však být.</p>
+<p>Rozkrájej tak nazvaný cervulát na tenké koláčky, pak rovnej okolo mísy vždy jeden koláček cervulátu a&nbsp;jeden koláček citronu, do mísy dej marynovaného ouhoře a&nbsp;pryky, oboje na kousky rozkrájené, jakož i&nbsp;od kůstek očištěné sardele a&nbsp;kaprle; potom utluč v&nbsp;moždíři jeden na tvrdo vařený žloutek, několik bobkových lístků, asi dvě sardele, půl cibule, 3 zrnka pepře a&nbsp;trochu kaprlí, nalej na to dobrý vinní ocet a&nbsp;brabancový olej, a&nbsp;proceď to na salát. Mohou se k&nbsp;tomu též dát ústřice, mušle a&nbsp;olivy – nemusejí však být.</p>
 
 <a id="salat-celerovy"><h2>Salát celerový</h2></a>
 
