Odstranění nadbytečných pomlček

--- a/src/vejce.html
+++ b/src/vejce.html
@@ -34,7 +34,7 @@
 
 <a id="vejce-s-houbami"><h2>Vejce s&nbsp;houbami</h2></a>
 
-<p>Rozkloktej a&nbsp;osol několik vajec, na omeletkové formičce nech rozpustit máslo, nalej na ni polovic těch vajec a&nbsp;udělej omeletku, polož ji na máslem vymazanou misku tím opečeným vespod, usekej kousek uvařené štiky a&nbsp;nech ji s&nbsp;houbičkami, buď se hříbky anebo žampionky, a&nbsp;trochu zelené petruželky na čerstvém másle –usmažit, pak tím pomaž, tu omeletku, upeč ještě jednu, tu zase na to přiklop tím opečeným navrch, nech to ještě trochu opect – a&nbsp;je to hotovo.</p>
+<p>Rozkloktej a&nbsp;osol několik vajec, na omeletkové formičce nech rozpustit máslo, nalej na ni polovic těch vajec a&nbsp;udělej omeletku, polož ji na máslem vymazanou misku tím opečeným vespod, usekej kousek uvařené štiky a&nbsp;nech ji s&nbsp;houbičkami, buď se hříbky anebo žampionky, a&nbsp;trochu zelené petruželky na čerstvém másle usmažit, pak tím pomaž, tu omeletku, upeč ještě jednu, tu zase na to přiklop tím opečeným navrch, nech to ještě trochu opect – a&nbsp;je to hotovo.</p>
 
 <a id="svitek-z-vajec-s-houbami"><h2>Svítek z&nbsp;vajec s&nbsp;houbami</h2></a>
 
