--- a/src/zeleniny.html
+++ b/src/zeleniny.html
@@ -30,7 +30,7 @@
 
 <a id="stovik-se-smazenymi-jatrami"><h2>Šťovík se smaženými játrami</h2></a>
 
-<p>Přeber a&nbsp;dobře očisti mladý zahradní šťovík, vyper ho v&nbsp;několika vodách, konečně ho vhod do varící vody a&nbsp;nech ho trochu ovařit, pak ho oceď a&nbsp;na prkénku jako špenát dobře usekej; nech na kastrolu rozpálit čtyry <a href="miry-a-vahy.html#lot" class="mav">loty</a> másla, vlož do něho ten šťovík, a&nbsp;když meti častým mícháním trochu –vysmahne, vmíchej do něho lžíci mouky, několik lžic kyselé smetany a&nbsp;posléz asi dva žloutky s&nbsp;trochou studené vody rozdělané; potom dej šťovík na mísu a&nbsp;oblož ho buď smaženými játrami nebo klobásou.</p>
+<p>Přeber a&nbsp;dobře očisti mladý zahradní šťovík, vyper ho v&nbsp;několika vodách, konečně ho vhod do varící vody a&nbsp;nech ho trochu ovařit, pak ho oceď a&nbsp;na prkénku jako špenát dobře usekej; nech na kastrolu rozpálit čtyry <a href="miry-a-vahy.html#lot" class="mav">loty</a> másla, vlož do něho ten šťovík, a&nbsp;když meti častým mícháním trochu vysmahne, vmíchej do něho lžíci mouky, několik lžic kyselé smetany a&nbsp;posléz asi dva žloutky s&nbsp;trochou studené vody rozdělané; potom dej šťovík na mísu a&nbsp;oblož ho buď smaženými játrami nebo klobásou.</p>
 
 <a id="karfiol-omasteny"><h2>Karfiol omaštěný</h2></a>
 
