--- a/src/moucna-jidla-obycejna-i-jemnejsi.html
+++ b/src/moucna-jidla-obycejna-i-jemnejsi.html
@@ -248,7 +248,7 @@
 
 <a id="rejze-s-jablkami-ii"><h2>Rejže s&nbsp;jablkami II</h2></a>
 
-<p>Uvař ze čtyr <a href="miry-a-vahy.html#lot" class="mav">lotů</a> dobře vyprané rejže hustou kaši a&nbsp;nech ji vychladnout; utři ve smetaně 4 <a href="miry-a-vahy.html#lot" class="mav">loty</a> čerstvého másla, dej do něho tu vychladlou kaši, vraz do toho 4 žloutky, přidej k&nbsp;tomu 4 <a href="miry-a-vahy.html#lot" class="mav">loty</a> tlučeného cukru, dobře to utři, vmíchej do toho ze třech bílku tuhý sníh, na lístky rozkrájená míšeňská jablka, dva <a href="miry-a-vahy.html#lot" class="mav">loty</a> velkých hrozinek bez jadýrek, trochu to osol, vymaž formu, vy- syp ji ‚žemličkovou kůrou, vylož ji hrozinkama bez jadýrek, dej to do ní a&nbsp;nech to hodinu v&nbsp;páře vařit; pak to vyklop a&nbsp;dej to na tabuli.</p>
+<p>Uvař ze čtyr <a href="miry-a-vahy.html#lot" class="mav">lotů</a> dobře vyprané rejže hustou kaši a&nbsp;nech ji vychladnout; utři ve smetaně 4 <a href="miry-a-vahy.html#lot" class="mav">loty</a> čerstvého másla, dej do něho tu vychladlou kaši, vraz do toho 4 žloutky, přidej k&nbsp;tomu 4 <a href="miry-a-vahy.html#lot" class="mav">loty</a> tlučeného cukru, dobře to utři, vmíchej do toho ze třech bílku tuhý sníh, na lístky rozkrájená míšeňská jablka, dva <a href="miry-a-vahy.html#lot" class="mav">loty</a> velkých hrozinek bez jadýrek, trochu to osol, vymaž formu, vysyp ji žemličkovou kůrou, vylož ji hrozinkama bez jadýrek, dej to do ní a&nbsp;nech to hodinu v&nbsp;páře vařit; pak to vyklop a&nbsp;dej to na tabuli.</p>
 
 <a id="rejze-pecena-se-sekaninou"><h2>Rejže pečená se sekaninou</h2></a>
 
