--- a/src/dorty.html
+++ b/src/dorty.html
@@ -108,7 +108,7 @@
 
 <a id="dort-z-maku"><h2>Dort z&nbsp;máku</h2></a>
 
-<p>Tři hodinu dvanáct žloutků se dvanácti <a href="miry-a-vahy.html#lot" class="mav">loty</a> tlučeného cukru, potom k&nbsp;tomu přidej trochu skořice, tři hřebíčky, kousek vanilky, vše na prášek utlučeno a&nbsp;pro-sáto, s&nbsp;půl citronu drobně skrájenou kůru, čtyry <a href="miry-a-vahy.html#lot" class="mav">loty</a> ustrouhaných neloupaných mandlí, dvanáct <a href="miry-a-vahy.html#lot" class="mav">lotů</a> hodně utlučeného máku, lžíci pěkné mouky a&nbsp;z&nbsp;těch dvanácti bílků tuhý sníh, dobře to promíchej, vlej to do máslem vymazané a&nbsp;strouhanou prosátou žemličkou vysypané dortové formy, a&nbsp;nech to zvolna pect; když to vyndáš z&nbsp;trouby, sejmi okolek, dort nech vystydnout a&nbsp;pak ho okrášli ledem podle libosti.</p>
+<p>Tři hodinu dvanáct žloutků se dvanácti <a href="miry-a-vahy.html#lot" class="mav">loty</a> tlučeného cukru, potom k&nbsp;tomu přidej trochu skořice, tři hřebíčky, kousek vanilky, vše na prášek utlučeno a&nbsp;prosáto, s&nbsp;půl citronu drobně skrájenou kůru, čtyry <a href="miry-a-vahy.html#lot" class="mav">loty</a> ustrouhaných neloupaných mandlí, dvanáct <a href="miry-a-vahy.html#lot" class="mav">lotů</a> hodně utlučeného máku, lžíci pěkné mouky a&nbsp;z&nbsp;těch dvanácti bílků tuhý sníh, dobře to promíchej, vlej to do máslem vymazané a&nbsp;strouhanou prosátou žemličkou vysypané dortové formy, a&nbsp;nech to zvolna pect; když to vyndáš z&nbsp;trouby, sejmi okolek, dort nech vystydnout a&nbsp;pak ho okrášli ledem podle libosti.</p>
 
 <a id="pomerancovy-dort"><h2>Pomerančový dort</h2></a>
 
