--- a/src/ledy-rozlicnych-barev.html
+++ b/src/ledy-rozlicnych-barev.html
@@ -16,7 +16,7 @@
 
 <a id="skoricovy-led"><h2>Skořicový led</h2></a>
 
-<p>Vezme se 4 <a href="miry-a-vahy.html#lot" class="mav">loty</a> tlučeného cukru, <a href="miry-a-vahy.html#lot" class="mav">lot</a> tlučené pro-sáté skořice a&nbsp;bílkový sníh, míchá se to půl hodinky, nebo lépe až se dělají puchýře – a&nbsp;led jest hotov.</p>
+<p>Vezme se 4 <a href="miry-a-vahy.html#lot" class="mav">loty</a> tlučeného cukru, <a href="miry-a-vahy.html#lot" class="mav">lot</a> tlučené prosáté skořice a&nbsp;bílkový sníh, míchá se to půl hodinky, nebo lépe až se dělají puchýře – a&nbsp;led jest hotov.</p>
 
 <a id="jahodovy-led"><h2>Jahodový led</h2></a>
 
