--- a/src/moucna-jidla-obycejna-i-jemnejsi.html
+++ b/src/moucna-jidla-obycejna-i-jemnejsi.html
@@ -42,7 +42,7 @@
 
 <a id="krupicne-knedliky"><h2>Krupičné knedlíky</h2></a>
 
-<p>Dej na hlubokou hladkou, misku <a href="miry-a-vahy.html#libra" class="mav">libru</a> velké krupice, k&nbsp;ní dvě na kostky nakrájené usmažené žemličky a&nbsp;trochu, soli; když je všechno připraveno, nech zvařit asi čtyry <a href="miry-a-vahy.html#zejdlik" class="mav">žejdlíky</a> vody, a&nbsp;když je v&nbsp;největším var, tedy nalévej na krupici mezi ustavičným mícháním co možná spěšně tolik vody, až se udělá hodně tuhé těsto; dej však pozor, abysi nepřelila; načež těsto okus, zdali je dost slané, pak dělej jako pomeranč velké knedlíky a&nbsp;vpouštěj je do vařící vody; za čtvrt hodiny můžeš jeden vyndat a&nbsp;vidličkama roztrhnout; jsou-li dost provařené, tedy je vyndej, roztrhni každý, posyp ostrouhanou žemličkovou kůrkou, polej hojně rozpáleným máslem a&nbsp;nes je na stůl.</p>
+<p>Dej na hlubokou hladkou misku <a href="miry-a-vahy.html#libra" class="mav">libru</a> velké krupice, k&nbsp;ní dvě na kostky nakrájené usmažené žemličky a&nbsp;trochu, soli; když je všechno připraveno, nech zvařit asi čtyry <a href="miry-a-vahy.html#zejdlik" class="mav">žejdlíky</a> vody, a&nbsp;když je v&nbsp;největším var, tedy nalévej na krupici mezi ustavičným mícháním co možná spěšně tolik vody, až se udělá hodně tuhé těsto; dej však pozor, abysi nepřelila; načež těsto okus, zdali je dost slané, pak dělej jako pomeranč velké knedlíky a&nbsp;vpouštěj je do vařící vody; za čtvrt hodiny můžeš jeden vyndat a&nbsp;vidličkama roztrhnout; jsou-li dost provařené, tedy je vyndej, roztrhni každý, posyp ostrouhanou žemličkovou kůrkou, polej hojně rozpáleným máslem a&nbsp;nes je na stůl.</p>
 
 <a id="krupicne-knedlicky-v-kremu"><h2>Krupičné knedlíčky v&nbsp;krému</h2></a>
 
