--- a/src/nadivky-do-kolacu-buchticek-a-koblih.html
+++ b/src/nadivky-do-kolacu-buchticek-a-koblih.html
@@ -6,7 +6,7 @@
 
 <a id="mak"><h2>Mák</h2></a>
 
-<p>Mák se může buď tlouct za subha, nebo se dříve přemeje ve vodě, pak ve smetaně do měkka uvaří a&nbsp;potom se ve zvláštní k&nbsp;tomu zřízené pánvi dobře rozetře. Když jest rozetřen, dá se na rendlíček, k&nbsp;němu kousek másla, a&nbsp;je-li za sucha tlučen, tedy se přileje do něho sladké smetany, a&nbsp;nechá se ještě vařit, aby z&nbsp;něho byla hustá kašička, přidá se k&nbsp;němu buď cukru nebo českého medu tolik, aby byl dostatečně sladký, pak se do něho dá dle libosti buď citronové nebo cukrované pomerančové kůry a&nbsp;buď hřebíčku nebo skořice anebo květu. Každý si může dle libosti dát chuť jakou chce.</p>
+<p>Mák se může buď tlouct za sucha, nebo se dříve přemeje ve vodě, pak ve smetaně do měkka uvaří a&nbsp;potom se ve zvláštní k&nbsp;tomu zřízené pánvi dobře rozetře. Když jest rozetřen, dá se na rendlíček, k&nbsp;němu kousek másla, a&nbsp;je-li za sucha tlučen, tedy se přileje do něho sladké smetany, a&nbsp;nechá se ještě vařit, aby z&nbsp;něho byla hustá kašička, přidá se k&nbsp;němu buď cukru nebo českého medu tolik, aby byl dostatečně sladký, pak se do něho dá dle libosti buď citronové nebo cukrované pomerančové kůry a&nbsp;buď hřebíčku nebo skořice anebo květu. Každý si může dle libosti dát chuť jakou chce.</p>
 
 <a id="tvaroh"><h2>Tvaroh</h2></a>
 
@@ -26,8 +26,8 @@
 
 <a id="pernik"><h2>Perník</h2></a>
 
-<p>Ustrouhej několik tabulek perníku, dej ho s&nbsp;kouskem másla a&nbsp;tlučeným cukrem na rendlík a&nbsp;nech ho trochu upražit Jest k&nbsp;vůli rozmanitosti na německé koláče velmi příhodný a&nbsp;takto připravený i&nbsp;do buchtiček velmi chutný.</p>
+<p>Ustrouhej několik tabulek perníku, dej ho s&nbsp;kouskem másla a&nbsp;tlučeným cukrem na rendlík a&nbsp;nech ho trochu upražit. Jest k&nbsp;vůli rozmanitosti na německé koláče velmi příhodný a&nbsp;takto připravený i&nbsp;do buchtiček velmi chutný.</p>
 
 <a id="snih"><h2>Sníh</h2></a>
 
-<p>Má-li sníh býti jak se patří, musí se obzvláště na to hledět, aby byly vejce čerstvé a&nbsp;ve chladu chované. Bílky, od kterých se žloutky i&nbsp;očka opatrně oddělí, dají se buď na cejnovou nebo na jinou mísu a&nbsp;šlehají se buď tenkou loučkou, nebo pěknou březovou oloupanou metličkou, nebo také, je-li naspěch, vidličkou tak dlouho, až se z&nbsp;nich udělá jako sníh bílá a&nbsp;tak hustá pěna, že, když se mísa obrátí, pěna na ni drží. Ve větších kuchyních mívají k&nbsp;tomu zvláštní mosazný kotlíček a&nbsp;drátěnou metlu, v&nbsp;domácnosti se to však všelijak odbyde. Sněhu může se mimo jiné věci upotřebit i&nbsp;k&nbsp;okrášlení bílkových koláčů, totiž: dá se na každý koláček kus pevného sněhu, posypou se hodně strouhanými mandlemi a&nbsp;cukrem a&nbsp;nechají se spěšně v&nbsp;troubě pect.</p>
+<p>Má-li sníh býti jak se patří, musí se obzvláště na to hledět, aby byly vejce čerstvé a&nbsp;ve chladu chované. Bílky, od kterých se žloutky i&nbsp;očka opatrně oddělí, dají se buď na cejnovou nebo na jinou mísu a&nbsp;šlehají se buď tenkou loučkou, nebo pěknou březovou oloupanou metličkou, nebo také, je-li naspěch, vidličkou tak dlouho, až se z&nbsp;nich udělá jako sníh bílá a&nbsp;tak hustá pěna, že, když se mísa obrátí, pěna na ni drží. Ve větších kuchyních mívají k&nbsp;tomu zvláštní mosazný kotlíček a&nbsp;drátěnou metlu, v&nbsp;domácnosti se to však všelijak odbyde. Sněhu může se mimo jiné věci upotřebit i&nbsp;k&nbsp;okrášlení bílkových koláčů, totiž: dá se na každý koláček kus pevného sněhu, posypou se hodně strouhanými mandlemi a&nbsp;cukrem a&nbsp;nechají se spěšně v&nbsp;troubě péct.</p>
