--- a/src/polivky-masite.html
+++ b/src/polivky-masite.html
@@ -108,7 +108,7 @@
 
 <a id="polivka-z-houbicek-a-telecich-brzlicku"><h2>Polívka z&nbsp;houbiček a&nbsp;telecích brzlíčků</h2></a>
 
-<p>Rozkrájej mladé hříbky na tenké lístky a&nbsp;nech je se zelenou, drobně usekanou petruželkou a&nbsp;trochem pepře na másle dusit, až vysmahnou; potom přidej k&nbsp;nim lžíci mouky a&nbsp;nech je ještě trochu dusit Uvař napolo dva telecí brzlíčky, očisti je od šumu, rozsekej je na drobno a&nbsp;nech je též s&nbsp;jednou drobně usekanou cibulkou na kousku zpěněného másla dusit; za chvíli je dej i&nbsp;s&nbsp;těmi houbičkami asi do <a href="miry-a-vahy.html#zejdlik" class="mav">čtyržejdlíkového</a> hrnku, nalej na to dostatečně hovězí procezené polívky a&nbsp;nech to ještě půl hodiny vařit; pak rozmíchej v&nbsp;hrnečku tři žloutky s&nbsp;trochou vlažné polívky, zakloktej tím všechnu ostatní polívku a&nbsp;nes ji hned na stůl.</p>
+<p>Rozkrájej mladé hříbky na tenké lístky a&nbsp;nech je se zelenou, drobně usekanou petruželkou a&nbsp;trochem pepře na másle dusit, až vysmahnou; potom přidej k&nbsp;nim lžíci mouky a&nbsp;nech je ještě trochu dusit. Uvař napolo dva telecí brzlíčky, očisti je od šumu, rozsekej je na drobno a&nbsp;nech je též s&nbsp;jednou drobně usekanou cibulkou na kousku zpěněného másla dusit; za chvíli je dej i&nbsp;s&nbsp;těmi houbičkami asi do <a href="miry-a-vahy.html#zejdlik" class="mav">čtyržejdlíkového</a> hrnku, nalej na to dostatečně hovězí procezené polívky a&nbsp;nech to ještě půl hodiny vařit; pak rozmíchej v&nbsp;hrnečku tři žloutky s&nbsp;trochou vlažné polívky, zakloktej tím všechnu ostatní polívku a&nbsp;nes ji hned na stůl.</p>
 
 <a id="zelena-polivka-s-jarnich-bylinek"><h2>Zelená polívka s&nbsp;jarních bylinek</h2></a>
 
