--- a/src/cukrovinky.html
+++ b/src/cukrovinky.html
@@ -78,7 +78,7 @@
 
 <a id="cukrova-sunka"><h2>Cukrová šunka</h2></a>
 
-<p>Oloupej a&nbsp;ustrouhej čtvrt <a href="miry-a-vahy.html#libra" class="mav">libry</a> sladkých a&nbsp;4 <a href="miry-a-vahy.html#lot" class="mav">loty</a> hořkých mandlí, pak je dej na mísu, k&nbsp;nim čtvrt <a href="miry-a-vahy.html#libra" class="mav">libry</a> tlučeného cukru, trochu bukového sněhu a&nbsp;dobře to utři; potom toho čtvrtinu odlož stranou, do ostatního dej <a href="miry-a-vahy.html#kvintlik" class="mav">kvintlík</a> tlučeného hřebíčku, <a href="miry-a-vahy.html#kvintlik" class="mav">kvintlík</a> tlučené skořice, též tolik strouhaného muškátového ořechu, lžičku sandálového prásku (pulvisirter Sandel), všecko dobře promíchej a&nbsp;vypracuj, načež z&nbsp;toho udělej bochánek, navrch dej tu prvé stranou odloženou bílou mandlovou kašičku a&nbsp;přimáčkni ji, potom bochánek rozkrájej, ty řízky nožem na papíře uhlaď a&nbsp;nech je usušit; pak to narovnej na talíř jako nakrájenou šunku. Pro větší žert může se na stůl k&nbsp;tomu dát do slánky strouhané čokolády místo pepře. Je to chutný a&nbsp;pěkný pamlsek.</p>
+<p>Oloupej a&nbsp;ustrouhej čtvrt <a href="miry-a-vahy.html#libra" class="mav">libry</a> sladkých a&nbsp;4 <a href="miry-a-vahy.html#lot" class="mav">loty</a> hořkých mandlí, pak je dej na mísu, k&nbsp;nim čtvrt <a href="miry-a-vahy.html#libra" class="mav">libry</a> tlučeného cukru, trochu bukového sněhu a&nbsp;dobře to utři; potom toho čtvrtinu odlož stranou, do ostatního dej <a href="miry-a-vahy.html#kvintlik" class="mav">kvintlík</a> tlučeného hřebíčku, <a href="miry-a-vahy.html#kvintlik" class="mav">kvintlík</a> tlučené skořice, též tolik strouhaného muškátového ořechu, lžičku sandálového prášku (pulvisirter Sandel), všecko dobře promíchej a&nbsp;vypracuj, načež z&nbsp;toho udělej bochánek, navrch dej tu prvé stranou odloženou bílou mandlovou kašičku a&nbsp;přimáčkni ji, potom bochánek rozkrájej, ty řízky nožem na papíře uhlaď a&nbsp;nech je usušit; pak to narovnej na talíř jako nakrájenou šunku. Pro větší žert může se na stůl k&nbsp;tomu dát do slánky strouhané čokolády místo pepře. Je to chutný a&nbsp;pěkný pamlsek.</p>
 
 <a id="cukrovy-cervulat"><h2>Cukrový cervulát</h2></a>
 
@@ -142,7 +142,7 @@
 
 <a id="skoricove-pokroutky"><h2>Skořicové pokroutky</h2></a>
 
-<p>Čtvrt <a href="miry-a-vahy.html#libra" class="mav">libry</a> tlučeného cukru, jedno vejce a&nbsp;jeden žloutek míchej v&nbsp;hrnku půl hodiny, potom K&nbsp;tomu přidej čtvrt lotu skořice, s&nbsp;půl citronu nakrájenou kůru a&nbsp;čtvrt <a href="miry-a-vahy.html#libra" class="mav">libry</a> mouky; načež potři plech voskem, sázej naň z&nbsp;těsta malé hromádky, poklaď je na dlouho krájenými mandlemi, posyp hrubě tlučeným cukrem a&nbsp;nech je zvolna upect. V&nbsp;suchém místě nechají se dlouho udržet.</p>
+<p>Čtvrt <a href="miry-a-vahy.html#libra" class="mav">libry</a> tlučeného cukru, jedno vejce a&nbsp;jeden žloutek míchej v&nbsp;hrnku půl hodiny, potom k&nbsp;tomu přidej čtvrt lotu skořice, s&nbsp;půl citronu nakrájenou kůru a&nbsp;čtvrt <a href="miry-a-vahy.html#libra" class="mav">libry</a> mouky; načež potři plech voskem, sázej naň z&nbsp;těsta malé hromádky, poklaď je na dlouho krájenými mandlemi, posyp hrubě tlučeným cukrem a&nbsp;nech je zvolna upect. V&nbsp;suchém místě nechají se dlouho udržet.</p>
 
 <a id="anyzove-preclicky"><h2>Anýzové preclíčky</h2></a>
 
@@ -200,7 +200,7 @@
 
 <a id="jine-ocukrovane-kastany"><h2>Jiné ocukrované kaštany</h2></a>
 
-<p>Uvař a&nbsp;oloupej půl kopy kaštanů, pak je ustrouhej a&nbsp;utluč se čtyřmi <a href="miry-a-vahy.html#lot" class="mav">loty</a> cukru a&nbsp;trochou vody na jemné těstíčko; z&nbsp;tohoto pak buď tvořítkem anebo pouze rukama opět utvoř kaštany a nech je trochu oschnout Mezitím nech čtvrt <a href="miry-a-vahy.html#libra" class="mav">libry</a> cukru se čtyřmi lžícemi vody až k&nbsp;šestému stupni zvařit, přimíchej k&nbsp;němu pěknou velkou tabulku čokolády, a&nbsp;míchej tím, až je z&nbsp;toho hodně hustá kasička, pak v&nbsp;ní buď omáčej anebo ní potírej na dřívko napíchnuté kaštany, nech je jako předešlé oschnout a&nbsp;vlož je do papírků.</p>
+<p>Uvař a&nbsp;oloupej půl kopy kaštanů, pak je ustrouhej a&nbsp;utluč se čtyřmi <a href="miry-a-vahy.html#lot" class="mav">loty</a> cukru a&nbsp;trochou vody na jemné těstíčko; z&nbsp;tohoto pak buď tvořítkem anebo pouze rukama opět utvoř kaštany a nech je trochu oschnout. Mezitím nech čtvrt <a href="miry-a-vahy.html#libra" class="mav">libry</a> cukru se čtyřmi lžícemi vody až k&nbsp;šestému stupni zvařit, přimíchej k&nbsp;němu pěknou velkou tabulku čokolády, a&nbsp;míchej tím, až je z&nbsp;toho hodně hustá kasička, pak v&nbsp;ní buď omáčej anebo ní potírej na dřívko napíchnuté kaštany, nech je jako předešlé oschnout a&nbsp;vlož je do papírků.</p>
 
 <a id="ocukrovane-amarelky"><h2>Ocukrované amarelky</h2></a>
 
@@ -236,7 +236,7 @@
 
 <a id="chlebicek-z-kastanu"><h2>Chlebíček z&nbsp;kaštanů</h2></a>
 
-<p>Uvař do měkka kaštany a&nbsp;čtvrt <a href="miry-a-vahy.html#libra" class="mav">libry</a> jich ustrouhej, přidej k&nbsp;nim šest žloutků, čtvrt <a href="miry-a-vahy.html#libra" class="mav">libry</a> tlučeného cukru, a&nbsp;míchej Um, až se to zpění, pak do toho vmíchej ze šesti bílků tuhý sníh a&nbsp;tři <a href="miry-a-vahy.html#lot" class="mav">loty</a> pěkné mouky, naplň tou směsí malé papírové kapsičky a&nbsp;nech to při mírném ohni upect.</p>
+<p>Uvař do měkka kaštany a&nbsp;čtvrt <a href="miry-a-vahy.html#libra" class="mav">libry</a> jich ustrouhej, přidej k&nbsp;nim šest žloutků, čtvrt <a href="miry-a-vahy.html#libra" class="mav">libry</a> tlučeného cukru, a&nbsp;míchej tím, až se to zpění, pak do toho vmíchej ze šesti bílků tuhý sníh a&nbsp;tři <a href="miry-a-vahy.html#lot" class="mav">loty</a> pěkné mouky, naplň tou směsí malé papírové kapsičky a&nbsp;nech to při mírném ohni upect.</p>
 
 <a id="komisni-chlebicek"><h2>Komisní chlebíček</h2></a>
 
