--- a/src/zadelavana-zverina.html
+++ b/src/zadelavana-zverina.html
@@ -56,7 +56,7 @@
 
 <a id="duseni-skrivanci"><h2>Dušení skřivánci</h2></a>
 
-<p>Ober, vykuchej a&nbsp;očistí náležitě skřivánky. Dej na rendlík kus másla, dvě drobně nasekané cibule a&nbsp;nech to do zlatova spěnit, pak dej ptáčky do toho, osol je, přikrej poklicí a&nbsp;nech je dusit; když se vypuštěná z&nbsp;nich šťáva začíná ztrácet, přisyp k&nbsp;nim asi lžíci mouky, „zamíchej to a&nbsp;přilej tolik hovězí polívky, mnoho-li je potřebí, aby bylo dostatečně omáčky, pak to trochu okořeň tlučeným pepřem, přilej čtvrtku vína, nech to ještě trochu povařit a&nbsp;dej to na mísu“.</p>
+<p>Ober, vykuchej a&nbsp;očistí náležitě skřivánky. Dej na rendlík kus másla, dvě drobně nasekané cibule a&nbsp;nech to do zlatova spěnit, pak dej ptáčky do toho, osol je, přikrej poklicí a&nbsp;nech je dusit; když se vypuštěná z&nbsp;nich šťáva začíná ztrácet, přisyp k&nbsp;nim asi lžíci mouky, zamíchej to a&nbsp;přilej tolik hovězí polívky, mnoho-li je potřebí, aby bylo dostatečně omáčky, pak to trochu okořeň tlučeným pepřem, přilej čtvrtku vína, nech to ještě trochu povařit a&nbsp;dej to na mísu.</p>
 
 <a id="male-ptacky-s-omackou"><h2>Malé ptáčky s&nbsp;omáčkou</h2></a>
 
