Mezery za číslem

--- a/src/kompoty.html
+++ b/src/kompoty.html
@@ -38,11 +38,11 @@
 
 <a id="kompot-z-cerstvych-jablek"><h2>Kompot z&nbsp;čerstvých jablek</h2></a>
 
-<p>Oloupej 12 pěkných míšeňských jablek a&nbsp;vlož je do studené vody, aby nezčernaly, pak je nakrájej na koláčky, ohryzky vypíchej plechovou formičkou, koláčky urovnej na kompotní misku, vytlač na ně skrze dírkovanou lžíci šťávu z&nbsp;jednoho citronu, posyp je cukrem, na kterém jsi kůru s&nbsp;téhož citronu byla ostrouhala, a&nbsp;polej je punčovinou; pro lepší ouhlednost poklad vrchní koláčky zavařenými višněmi.</p>
+<p>Oloupej 12&nbsp;pěkných míšeňských jablek a&nbsp;vlož je do studené vody, aby nezčernaly, pak je nakrájej na koláčky, ohryzky vypíchej plechovou formičkou, koláčky urovnej na kompotní misku, vytlač na ně skrze dírkovanou lžíci šťávu z&nbsp;jednoho citronu, posyp je cukrem, na kterém jsi kůru s&nbsp;téhož citronu byla ostrouhala, a&nbsp;polej je punčovinou; pro lepší ouhlednost poklad vrchní koláčky zavařenými višněmi.</p>
 
 <a id="kompot-z-hrusek"><h2>Kompot z&nbsp;hrušek</h2></a>
 
-<p>Oloupej pěkně 9 nebo 10 hrušek a&nbsp;vlož je do studené vody, aby nezčervenaly; dej asi do dvou <a href="miry-a-vahy.html#zejdlik" class="mav">žejdlíků</a> vody čtvrt <a href="miry-a-vahy.html#libra" class="mav">libry</a> cukru, kus celé skořice, kůru s&nbsp;jednoho citronu, a&nbsp;když se to začne vařit, vlož hrušky do toho, přikrej je a&nbsp;nech je vařit, až jsou měkke; potom hrušky vyndej, omáčku nech ještě chvíli vařit, pak ji proceď na hrušky, nech to vystydnout a&nbsp;dej to na stůl. Nebo rozkrájej hrušky na půlky a&nbsp;nech je jako prvé vařit, pak je vyndej, do omáčky dej ještě čtvrt <a href="miry-a-vahy.html#libra" class="mav">libry</a> cukru a&nbsp;nech to tak dlouho vařit, až se cukr táhne; potom hrušky do melounové formy pěkně vyrovnej, omáčku na ně proceď a&nbsp;nech to stydnout; pak to vyklop, okrášli kolem nějakým listím a&nbsp;nes to na stůl.</p>
+<p>Oloupej pěkně 9&nbsp;nebo 10&nbsp;hrušek a&nbsp;vlož je do studené vody, aby nezčervenaly; dej asi do dvou <a href="miry-a-vahy.html#zejdlik" class="mav">žejdlíků</a> vody čtvrt <a href="miry-a-vahy.html#libra" class="mav">libry</a> cukru, kus celé skořice, kůru s&nbsp;jednoho citronu, a&nbsp;když se to začne vařit, vlož hrušky do toho, přikrej je a&nbsp;nech je vařit, až jsou měkke; potom hrušky vyndej, omáčku nech ještě chvíli vařit, pak ji proceď na hrušky, nech to vystydnout a&nbsp;dej to na stůl. Nebo rozkrájej hrušky na půlky a&nbsp;nech je jako prvé vařit, pak je vyndej, do omáčky dej ještě čtvrt <a href="miry-a-vahy.html#libra" class="mav">libry</a> cukru a&nbsp;nech to tak dlouho vařit, až se cukr táhne; potom hrušky do melounové formy pěkně vyrovnej, omáčku na ně proceď a&nbsp;nech to stydnout; pak to vyklop, okrášli kolem nějakým listím a&nbsp;nes to na stůl.</p>
 
 <a id="kompot-z-cerstvych-svestek"><h2>Kompot z&nbsp;čerstvých švestek</h2></a>
 
@@ -74,7 +74,7 @@
 
 <a id="kompot-ze-gdoulovych-jablek"><h2>Kompot ze gdoulových jablek</h2></a>
 
-<p>Oloupej 8 nebo 10 gdoulových jablek, rozkrájej je na čtvrtky, jaderníky vyřízni a&nbsp;jablka nech ve vodě uvařit na měkko sice, ne však aby se rozpadly; mezitím nech na rendlíčku čtvrt <a href="miry-a-vahy.html#libra" class="mav">libry</a> cukru s&nbsp;půl <a href="miry-a-vahy.html#zejdlik" class="mav">žejdlíkem</a> vody, kouskem skořice a&nbsp;nakrájenou citronovou kůrou do husta zvařit, potom jablka opatrně vyndej, vlož je do té zvařeniny a&nbsp;nech je ještě chvilku povařit, pak je vyndej na kompotní misku a&nbsp;tou šťávou je polej.</p>
+<p>Oloupej 8&nbsp;nebo 10&nbsp;gdoulových jablek, rozkrájej je na čtvrtky, jaderníky vyřízni a&nbsp;jablka nech ve vodě uvařit na měkko sice, ne však aby se rozpadly; mezitím nech na rendlíčku čtvrt <a href="miry-a-vahy.html#libra" class="mav">libry</a> cukru s&nbsp;půl <a href="miry-a-vahy.html#zejdlik" class="mav">žejdlíkem</a> vody, kouskem skořice a&nbsp;nakrájenou citronovou kůrou do husta zvařit, potom jablka opatrně vyndej, vlož je do té zvařeniny a&nbsp;nech je ještě chvilku povařit, pak je vyndej na kompotní misku a&nbsp;tou šťávou je polej.</p>
 
 <a id="kompot-kastanovy"><h2>Kompot kaštanový</h2></a>
 
