--- a/src/nadivky-do-kolacu-buchticek-a-koblih.html
+++ b/src/nadivky-do-kolacu-buchticek-a-koblih.html
@@ -10,7 +10,7 @@
 
 <a id="tvaroh"><h2>Tvaroh</h2></a>
 
-<p>Vezme se dobrý tvaroh, dá se na mísu a&nbsp;dobře se rozetře, pak se do něho vrazi žloutků a&nbsp;celých vajec tolik, aby byl právě tak řídký, jak jej kuchařka potřebuje (ku př. na <a href="miry-a-vahy.html#libra" class="mav">libru</a> tvarohu mohou se počítat 3 žloutky a&nbsp;3 celé vejce), potom se do něho dá trochu květu a&nbsp;osladí se dle libosti. Má-li se tohoto tvarohu použit na německé koláče, tedy se nechá jen tak; na skládané koláče ale mohou se do něho dát dobře přebrané a&nbsp;přemyté malé hrozinky.</p>
+<p>Vezme se dobrý tvaroh, dá se na mísu a&nbsp;dobře se rozetře, pak se do něho vrazi žloutků a&nbsp;celých vajec tolik, aby byl právě tak řídký, jak jej kuchařka potřebuje (ku př. na <a href="miry-a-vahy.html#libra" class="mav">libru</a> tvarohu mohou se počítat 3&nbsp;žloutky a&nbsp;3 celé vejce), potom se do něho dá trochu květu a&nbsp;osladí se dle libosti. Má-li se tohoto tvarohu použit na německé koláče, tedy se nechá jen tak; na skládané koláče ale mohou se do něho dát dobře přebrané a&nbsp;přemyté malé hrozinky.</p>
 
 <a id="hrozinkova-povidla"><h2>Hrozinková povidla</h2></a>
 
@@ -18,7 +18,7 @@
 
 <a id="cukrova-jiska"><h2>Cukrová jíška</h2></a>
 
-<p>Dej na rendlíček 4 <a href="miry-a-vahy.html#lot" class="mav">loty</a> pěkné mouky s&nbsp;malinkým kouskem másla, a&nbsp;nech ji do požloutla upražit, pak do ní přisyp 4 <a href="miry-a-vahy.html#lot" class="mav">loty</a> tlučeného cukru. Touto jíškou můžeš místo sekaných mandlí posypat malé koláčky.</p>
+<p>Dej na rendlíček 4&nbsp;<a href="miry-a-vahy.html#lot" class="mav">loty</a> pěkné mouky s&nbsp;malinkým kouskem másla, a&nbsp;nech ji do požloutla upražit, pak do ní přisyp 4&nbsp;<a href="miry-a-vahy.html#lot" class="mav">loty</a> tlučeného cukru. Touto jíškou můžeš místo sekaných mandlí posypat malé koláčky.</p>
 
 <a id="jicha-k-posypani-kolacu"><h2>Jícha k&nbsp;posypání koláčů</h2></a>
 
