--- a/src/ovocni-zavareninky.html
+++ b/src/ovocni-zavareninky.html
@@ -20,7 +20,7 @@
 
 <a id="visnova-stava"><h2>Višňová šťáva</h2></a>
 
-<p>Vezmi několik <a href="miry-a-vahy.html#zejdlik" class="mav">žejdlíků</a> zralých pěkných višní, šťopky oškubej, višně i&nbsp;s&nbsp;peckami utluč v&nbsp;mosazném moždíři, dej je do hrnku a&nbsp;nech je v&nbsp;něm 24 hodin stát, potom šťávu skrze čistý šat proceď. Na <a href="miry-a-vahy.html#libra" class="mav">libru</a> šťávy nech na čistém rendlíku tři čtvrtě <a href="miry-a-vahy.html#libra" class="mav">libry</a> cukru s&nbsp;půl <a href="miry-a-vahy.html#zejdlik" class="mav">žejdlíkem</a> vody zvařit ke třetímu stupni, pěnu seber, k&nbsp;cukru přidej <a href="miry-a-vahy.html#libra" class="mav">libru</a> té višňové šťávy a&nbsp;nech jen jeden var ještě přes to přejít, načež pěnu opět seber a&nbsp;šťávu uschovej v&nbsp;prohřátých skleněných láhvích.</p>
+<p>Vezmi několik <a href="miry-a-vahy.html#zejdlik" class="mav">žejdlíků</a> zralých pěkných višní, šťopky oškubej, višně i&nbsp;s&nbsp;peckami utluč v&nbsp;mosazném moždíři, dej je do hrnku a&nbsp;nech je v&nbsp;něm 24&nbsp;hodin stát, potom šťávu skrze čistý šat proceď. Na <a href="miry-a-vahy.html#libra" class="mav">libru</a> šťávy nech na čistém rendlíku tři čtvrtě <a href="miry-a-vahy.html#libra" class="mav">libry</a> cukru s&nbsp;půl <a href="miry-a-vahy.html#zejdlik" class="mav">žejdlíkem</a> vody zvařit ke třetímu stupni, pěnu seber, k&nbsp;cukru přidej <a href="miry-a-vahy.html#libra" class="mav">libru</a> té višňové šťávy a&nbsp;nech jen jeden var ještě přes to přejít, načež pěnu opět seber a&nbsp;šťávu uschovej v&nbsp;prohřátých skleněných láhvích.</p>
 
 <a id="visnova-zavareninka"><h2>Višňová zavařeninka</h2></a>
 
